--- a/requirements.in
+++ b/requirements.in
@@ -22,7 +22,7 @@ mypy_extensions
 # Needed in order to get the time of dawn, noon, sunset, and dusk
 astral
 
-# For parsing .yaml config files
+# For parsing .yml config files
 pyyaml
 
 # For template rendering
