--- a/astrality/config/astrality.yml
+++ b/astrality/config/astrality.yml
@@ -32,8 +32,8 @@ config/modules:
     # You enable directory modules by specifying the <name> of each external
     # module. The result is that the configurations contained in the following
     # files are merged into this file: <modules_directory>/<name>/modules.yml
-    enabled:
-        - name: solar_desktop
+    enabled_modules:
+        - name: solar_desktop.*
         - name: polybar
         - name: colors
         - name: terminals
