--- a/astrality/config/astrality.yml
+++ b/astrality/config/astrality.yml
@@ -9,18 +9,18 @@ config/astrality:
     # You can delay astrality on startup. The delay is given in seconds.
     startup_delay: 0
 
-    # Astrality can wait for shell commands to complete in their specified
-    # order. You can set the number of seconds Astrality waits for the shell
-    # commands to exit.
-    run_timeout: 0
-
+config/modules:
     # Modules can require successfull shell commands (non-zero exit codes) in
     # order to be enabled. You can specify the timeout for such checks, given
     # in seconds.
     requires_timeout: 1
 
-config/modules:
-    # Modified templates can be automatically recompiled
+    # Astrality can wait for shell commands to complete in their specified
+    # order. You can set the number of seconds Astrality waits for the shell
+    # commands to exit.
+    run_timeout: 0
+
+    # Modified templates can be automatically recompiled.
     recompile_modified_templates: true
 
     # There are two possible ways to define modules. Either in this file, as
