Tweak conf in terminal configs

--- a/astrality/config/modules/terminals/alacritty.yml.template
+++ b/astrality/config/modules/terminals/alacritty.yml.template
@@ -223,7 +223,7 @@ selection:
 
 dynamic_title: true
 
-hide_cursor_when_typing: false
+hide_cursor_when_typing: true
 
 # Style of the cursor
 #
@@ -389,3 +389,5 @@ key_bindings:
   - { key: F10,      mods: Super,   chars: "\x1b[21;3~"                  }
   - { key: F11,      mods: Super,   chars: "\x1b[23;3~"                  }
   - { key: F12,      mods: Super,   chars: "\x1b[24;3~"                  }
+
+# vim:filetype=yaml
