Use monospace font in kitty template

--- a/astrality/config/astrality.yml
+++ b/astrality/config/astrality.yml
@@ -107,7 +107,7 @@ context/fonts:
         size: 8
 
     2:
-        name: FuraMono Nerd Font
+        name: FuraCode Nerd Font Mono
         size: 8
 
     3:
