--- a/astrality/config/astrality.yml
+++ b/astrality/config/astrality.yml
@@ -39,6 +39,7 @@ config/modules:
     enabled_modules:
         # Module defined in this file
         - name: polybar
+        - name: terminals
 
         # All modules defined in <modules_directory>/solar_desktop/config.yml
         - name: solar_desktop::*
