--- a/requirements.txt
+++ b/requirements.txt
@@ -14,12 +14,14 @@ chardet==3.0.4            # via requests
 click==6.7                # via pip-tools
 docutils==0.14            # via sphinx
 first==2.0.1              # via pip-tools
+flake8==3.5.0
 freezegun==0.3.9          # via pytest-freezegun
 idna==2.6                 # via requests
 imagesize==0.7.1          # via sphinx
 jinja2==2.10
 livereload==2.5.1         # via sphinx-autobuild
 markupsafe==1.0           # via jinja2
+mccabe==0.6.1             # via flake8
 mypy-extensions==0.3.0
 mypy==0.560
 packaging==16.8           # via sphinx
@@ -29,6 +31,8 @@ pluggy==0.6.0             # via pytest
 port-for==0.3.1           # via sphinx-autobuild
 psutil==5.4.3             # via mypy
 py==1.5.2                 # via pytest
+pycodestyle==2.3.1        # via flake8
+pyflakes==1.6.0           # via flake8
 pygments==2.2.0           # via sphinx
 pyparsing==2.2.0          # via packaging
 pytest-env==0.6.2
