--- a/requirements.in
+++ b/requirements.in
@@ -48,3 +48,6 @@ watchdog
 
 # For linting python files
 flake8
+
+# Sphinx extension which inspects type annotations when using autodoc
+sphinx-autodoc-typehints
