--- a/requirements.txt
+++ b/requirements.txt
@@ -46,6 +46,7 @@ requests==2.18.4          # via sphinx
 six==1.11.0               # via freezegun, livereload, packaging, pip-tools, pytest, python-dateutil, sphinx
 snowballstemmer==1.2.1    # via sphinx
 sphinx-autobuild==0.7.1
+sphinx-autodoc-typehints==1.3.0
 sphinx-rtd-theme==0.2.4
 sphinx==1.7.0
 sphinxcontrib-websupport==1.0.1  # via sphinx
