Use TypedDict for module config

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@ split_before_named_assigns = False
 dedent_closing_brackets = True
 
 [pycodestyle]
-ignore = E704
+ignore = E704, C819
 
 [flake8]
 max-line-length = 80
