--- a/astrality/tests/test_config/test_modules/two_modules/config.yml
+++ b/astrality/tests/test_config/test_modules/two_modules/config.yml
@@ -3,4 +3,5 @@ module/bhutan:
 
 module/bangladesh:
     on_startup:
-        run: echo Greetings from Dhaka!
+        run:
+            - shell: echo Greetings from Dhaka!
