--- a/astrality/tests/test_config/astrality2.yml
+++ b/astrality/tests/test_config/astrality2.yml
@@ -9,4 +9,4 @@ module/A:
 
     on_exit:
         run:
-            - rm {templates/no_context.template}
+            - shell: rm {templates/no_context.template}
