--- a/astrality/tests/test_config/test_modules/module_with_placeholders/modules.yml
+++ b/astrality/tests/test_config/test_modules/module_with_placeholders/modules.yml
@@ -1,3 +1,3 @@
-module/placeholders:
+placeholders:
     {{ module.setting }}: 'bye!'
     {{ env.EXAMPLE_ENV_VARIABLE }}: {{ 'echo test' | shell }}
