--- a/.travis.yml
+++ b/.travis.yml
@@ -1,26 +1,37 @@
-language: python
-cache: pip
-os:
-  - linux
-  - osx
+cache:
+  pip: true
+  directories:
+    - $HOME/Library/Caches/Homebrew
+
+
 matrix:
-  allow_failures:
+  include:
+    - os: linux
+      language: python
+      python: 3.6
     - os: osx
-python:
-  - 3.6
+      language: generic
+
 before_install:
-  - sudo apt-get -qq update
-  - sudo apt-get install -y feh conky
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get -qq update; fi
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get install -y feh conky; fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update; fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew upgrade python3; fi
+
 install:
-  - pip install -r requirements.txt
-  - pip install coveralls
+  - pip3 install -r requirements.txt
+  - pip3 install coveralls
+
 before_script:
   - flake8 .
+
 script:
   - coverage run --rcfile=.coveragerc --source='.' -m py.test -vv --runslow
   - coverage report -m
+
 after_success:
   - coveralls
+
 deploy:
   provider: pypi
   user: jakobgm
