--- a/requirements.txt
+++ b/requirements.txt
@@ -6,30 +6,31 @@
 #
 alabaster==0.7.10         # via sphinx
 argh==0.26.2              # via sphinx-autobuild, watchdog
-astral==1.4
-attrs==17.4.0             # via pytest
+astral==1.6.1
+attrs==18.1.0             # via pytest
 babel==2.5.3              # via sphinx
-certifi==2018.1.18        # via requests
+certifi==2018.4.16        # via requests
 chardet==3.0.4            # via requests
 click==6.7                # via pip-tools
 docutils==0.14            # via sphinx
 first==2.0.1              # via pip-tools
 flake8==3.5.0
-freezegun==0.3.9          # via pytest-freezegun
+freezegun==0.3.10         # via pytest-freezegun
 idna==2.6                 # via requests
-imagesize==0.7.1          # via sphinx
+imagesize==1.0.0          # via sphinx
 jinja2==2.10
-livereload==2.5.1         # via sphinx-autobuild
+livereload==2.5.2         # via sphinx-autobuild
 markupsafe==1.0           # via jinja2
 mccabe==0.6.1             # via flake8
+more-itertools==4.1.0     # via pytest
 mypy-extensions==0.3.0
 mypy==0.600
-packaging==16.8           # via sphinx
+packaging==17.1           # via sphinx
 pathtools==0.1.2          # via sphinx-autobuild, watchdog
 pip-tools==2.0.2
 pluggy==0.6.0             # via pytest
 port-for==0.3.1           # via sphinx-autobuild
-py==1.5.2                 # via pytest
+py==1.5.3                 # via pytest
 pycodestyle==2.3.1        # via flake8
 pyflakes==1.6.0           # via flake8
 pygments==2.2.0           # via sphinx
@@ -37,23 +38,23 @@ pyparsing==2.2.0          # via packaging
 pytest-env==0.6.2
 pytest-freezegun==0.2.0
 pytest-mypy==0.3.1
-pytest==3.3.2
-python-dateutil==2.6.1    # via freezegun
-pytz==2017.3              # via astral, babel
+pytest==3.5.1
+python-dateutil==2.7.2    # via freezegun
+pytz==2018.4              # via astral, babel
 pyyaml==3.12
-requests==2.18.4          # via sphinx
-six==1.11.0               # via freezegun, livereload, packaging, pip-tools, pytest, python-dateutil, sphinx
+requests==2.18.4          # via astral, sphinx
+six==1.11.0               # via freezegun, livereload, more-itertools, packaging, pip-tools, pytest, python-dateutil, sphinx
 snowballstemmer==1.2.1    # via sphinx
 sphinx-autobuild==0.7.1
 sphinx-autodoc-typehints==1.3.0
-sphinx-rtd-theme==0.2.4
-sphinx==1.7.0
+sphinx-rtd-theme==0.3.1
+sphinx==1.7.4
 sphinxcontrib-websupport==1.0.1  # via sphinx
-tornado==4.5.3            # via livereload, sphinx-autobuild
+tornado==5.0.2            # via livereload, sphinx-autobuild
 typed-ast==1.1.0          # via mypy
 urllib3==1.22             # via requests
 watchdog==0.8.3
-wheel==0.30.0
+wheel==0.31.0
 
 # The following packages are considered to be unsafe in a requirements file:
 # setuptools
