--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,8 @@ click==6.7                # via pip-tools
 coloredlogs==9.3.1
 docutils==0.14            # via sphinx
 first==2.0.1              # via pip-tools
+flake8-commas==2.0.0
+flake8-quotes==1.0.0
 flake8==3.5.0
 freezegun==0.3.10         # via pytest-freezegun
 humanfriendly==4.12       # via coloredlogs
