Add new yapf rules
YAPF is still not in use, we are waiting for some issues to be resolved.

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,11 +1,16 @@
-[yapf]
-split_before_first_argument = False
-split_before_named_assigns = False
-dedent_closing_brackets = True
-
 [pycodestyle]
 ignore = E704, C819
 
 [flake8]
 max-line-length = 80
 ignore = C819, E211, E704
+
+[yapf]
+based_on_style = pep8
+INDENT_DICTIONARY_VALUE = True
+INDENT_WIDTH = 4
+NO_SPACES_AROUND_SELECTED_BINARY_OPERATORS = True
+SPACE_BETWEEN_ENDING_COMMA_AND_CLOSING_BRACKET = False
+SPLIT_BEFORE_NAMED_ASSIGNS = True
+DEDENT_CLOSING_BRACKETS = True
+SPLIT_COMPLEX_COMPREHENSION = True
