Move polybar to module subdirectories
This way we ensure that the last commit has been sucessfull.

--- a/astrality/config/astrality.yml
+++ b/astrality/config/astrality.yml
@@ -39,7 +39,7 @@ modules:
     # in subdirectories of <modules_directory>.
     enabled_modules:
         # Module defined in this file
-        - name: polybar
+        - name: polybar::*
         - name: terminals
 
         # All modules defined in <modules_directory>/solar_desktop/config.yml
