Add flake8 to the test suite

--- a/pytest.ini
+++ b/pytest.ini
@@ -7,5 +7,5 @@ env =
     UPPER_CASE_KEY=UPPER_CASE_VALUE
     conflicting_key=value1
     CONFLICTING_KEY=value2
-addopts = --mypy
+addopts = --mypy --flake8
 log_level = NOTSET
