--- a/requirements.txt
+++ b/requirements.txt
@@ -42,6 +42,7 @@ pyflakes==1.6.0           # via flake8
 pygments==2.2.0           # via sphinx
 pyparsing==2.2.0          # via packaging
 pytest-env==0.6.2
+pytest-flake8==1.0.1
 pytest-freezegun==0.2.0
 pytest-mypy==0.3.1
 pytest==3.6.0
