--- a/requirements.txt
+++ b/requirements.txt
@@ -4,64 +4,63 @@
 #
 #    pip-compile --output-file requirements.txt requirements.in
 #
-alabaster==0.7.10         # via sphinx
+alabaster==0.7.12         # via sphinx
 argh==0.26.2              # via sphinx-autobuild, watchdog
-astral==1.6.1
-atomicwrites==1.1.5       # via pytest
-attrs==18.1.0             # via pytest
+astral==1.7.1
+atomicwrites==1.2.1       # via pytest
+attrs==18.2.0             # via pytest
 babel==2.6.0              # via sphinx
-certifi==2018.4.16        # via requests
+certifi==2018.10.15       # via requests
 chardet==3.0.4            # via requests
-click==6.7                # via pip-tools
+click==7.0                # via pip-tools
 coloredlogs==10.0
 docutils==0.14            # via sphinx
-first==2.0.1              # via pip-tools
 flake8-commas==2.0.0
 flake8-quotes==1.0.0
-flake8==3.5.0
-freezegun==0.3.10         # via pytest-freezegun
-humanfriendly==4.12.1     # via coloredlogs
+flake8==3.6.0
+freezegun==0.3.11         # via pytest-freezegun
+humanfriendly==4.17       # via coloredlogs
 idna==2.7                 # via requests
-imagesize==1.0.0          # via sphinx
+imagesize==1.1.0          # via sphinx
 jinja2==2.10
 livereload==2.5.2         # via sphinx-autobuild
-markupsafe==1.0           # via jinja2
+markupsafe==1.1.0         # via jinja2
 mccabe==0.6.1             # via flake8
-more-itertools==4.2.0     # via pytest
-mypy-extensions==0.3.0
-mypy==0.610
-packaging==17.1           # via sphinx
+more-itertools==4.3.0     # via pytest
+mypy-extensions==0.4.1
+mypy==0.641
+packaging==18.0           # via sphinx
 pathtools==0.1.2          # via sphinx-autobuild, watchdog
-pip-tools==2.0.2
-pluggy==0.6.0             # via pytest
+pip-tools==3.1.0
+pluggy==0.8.0             # via pytest
 port-for==0.3.1           # via sphinx-autobuild
-psutil==5.4.6
-py==1.5.3                 # via pytest
-pycodestyle==2.3.1        # via flake8
-pyflakes==1.6.0           # via flake8
+psutil==5.4.8
+py==1.7.0                 # via pytest
+pycodestyle==2.4.0        # via flake8
+pyflakes==2.0.0           # via flake8
 pygments==2.2.0           # via sphinx
-pyparsing==2.2.0          # via packaging
+pyparsing==2.3.0          # via packaging
 pytest-env==0.6.2
-pytest-flake8==1.0.1
-pytest-freezegun==0.2.0
+pytest-flake8==1.0.2
+pytest-freezegun==0.3.0
 pytest-mypy==0.3.2
-pytest==3.6.1
-python-dateutil==2.7.3
-pytz==2018.4              # via astral, babel
-pyyaml==3.12
-requests==2.19.1          # via astral, sphinx
+pytest==4.0.0
+python-dateutil==2.7.5
+pytz==2018.7              # via astral, babel
+pyyaml==3.13
+requests==2.20.1          # via sphinx
 six==1.11.0               # via freezegun, livereload, more-itertools, packaging, pip-tools, pytest, python-dateutil, sphinx
 snowballstemmer==1.2.1    # via sphinx
 sphinx-autobuild==0.7.1
-sphinx-autodoc-typehints==1.3.0
-sphinx-rtd-theme==0.4.0
-sphinx==1.7.5
+sphinx-autodoc-typehints==1.5.0
+sphinx-rtd-theme==0.4.2
+sphinx==1.8.2
 sphinxcontrib-websupport==1.1.0  # via sphinx
-tornado==5.0.2            # via livereload, sphinx-autobuild
+tornado==5.1.1            # via livereload, sphinx-autobuild
 typed-ast==1.1.0          # via mypy
-urllib3==1.23             # via requests
-watchdog==0.8.3
-wheel==0.31.1
+urllib3==1.24.1           # via requests
+watchdog==0.9.0
+wheel==0.32.2
 
 # The following packages are considered to be unsafe in a requirements file:
 # setuptools
